// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Reset with invalid email 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Password Reset with invalid password 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "A valid password is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Password Reset with invalid token 1`] = `
Object {
  "message": "Invalid token",
}
`;

exports[`Password Reset with valid data 1`] = `
Object {
  "email": "password_reset_test@example.com",
  "emailVerified": true,
  "firstName": "Password Reset",
  "id": 2,
  "lastName": "Test",
}
`;

exports[`Password Reset with valid data 2`] = `
Object {
  "email": "password_reset_test@example.com",
  "emailVerified": true,
  "firstName": "Password Reset",
  "id": 2,
  "lastName": "Test",
}
`;
